compilateurDeca/src/test/deca/context/invalid/objet/expressions/instanceof_droit_non_class.deca
// Description:
//    Test de contexte : instanceof avec membre droit non classe (variable)
//
// Resultats:
//    Erreur contextuelle : Le membre droit de instanceof doit être une classe
//
// Historique:
//    cree le 15/01/2026

class A { }
{
    A a = new A();
    int x;
    a instanceof x;
}
